--- a/index.html
+++ b/index.html
@@ -94,18 +94,21 @@
             <a name="articles"></a> Articles
         </div>
         <p></p>
-        <a href="https://www.patreon.com/posts/quick-game-art-7709208" target="_blank">
-            <div class="preview-image-holder" style="background: url(Images/unity1.jpg)">
-                <div class="number"> Unity #1</div>
-                <div class="centered">Lit Toon Shader</div>
-                <div class="date">01/2017</div>
-                <div class="description">Effect of Gradient Ramps on Shader</div>
+        <a href="https://www.patreon.com/posts/12551796" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article1.jpg)">
+                <div class="number"> #1</div>
+                <div class="centered">Lighting Setup (Gamma)</div>
+                <div class="date">07/2017</div>
+                <div class="description">My Unity Lighting Setup for Gamma Color Space</div>
             </div>
-            <a href="https://www.patreon.com/posts/7709604" target="_blank">
-                <div class="patreon-link">
-                    <Patreon></Patreon> Source Files ($10 Tier)
-                </div>
-            </a>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+            <div class="patreon-link">
+
+            </div>
+
         </a>
         <p></p>
         <div class="headertext" style="font-size: 20px">
@@ -186,9 +189,66 @@
         </a>
         <p></p>
 
+
+        <a href="https://www.patreon.com/posts/11304399" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity5.jpg)">
+                <div class="number"> Unity #5</div>
+                <div class="centered">Toon Dissolve Shader</div>
+                <div class="date">05/2017</div>
+                <div class="description">Using a noise texture to dissolve the toon shader</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/11322157" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/12135718" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity6.jpg)">
+                <div class="number"> Unity #6</div>
+                <div class="centered">Toon Ice Shader</div>
+                <div class="date">06/2017</div>
+                <div class="description">A Glowing Ice Effect</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/12222170" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/13059579" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity7.jpg)">
+                <div class="number"> Unity #6</div>
+                <div class="centered">Toon Specular Shader</div>
+                <div class="date">07/2017</div>
+                <div class="description">Adding a fake specular to the toon shader</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/13120763" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
         <div class="headertext" style="font-size: 20px">
             <a name="textures"></a> Textures & Colors
         </div>
+
+
         <p></p>
         <a href="https://www.patreon.com/posts/7715616" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/tex1.jpg)">
@@ -261,6 +321,61 @@
         </a>
         <p></p>
 
+
+        <a href="https://www.patreon.com/posts/8677977" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/tex5.jpg)">
+                <div class="number"> Textures #5</div>
+                <div class="centered">Applying Palette</div>
+                <div class="date">04/2017</div>
+                <div class="description">Adding colours to a characters</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/8703308" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Extra Post ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/8857826" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/tex6.jpg)">
+                <div class="number"> Textures #6</div>
+                <div class="centered">Gradient Tricks</div>
+                <div class="date">04/2017</div>
+                <div class="description">Tricks to make gradient textures look better</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/8867540" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/12859658" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/tex7.jpg)">
+                <div class="number"> Textures #7</div>
+                <div class="centered">Gradient Materials</div>
+                <div class="date">07/2017</div>
+                <div class="description">Expressing Wood, Cloth, and Metal with gradients</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/12886639" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
 
         <div class="headertext" style="font-size: 20px">
             <a name="3d"></a> 3D Modelling
@@ -359,6 +474,207 @@
             </a>
         </a>
         <p></p>
+
+
+        <a href="https://www.patreon.com/posts/8588003" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d6.jpg)">
+                <div class="number"> 3D #6</div>
+                <div class="centered">Humanoid "Strong" Base</div>
+                <div class="date">03/2017</div>
+                <div class="description">Make a base model of a strong looking character</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/8595767" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/8770669" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d7.jpg)">
+                <div class="number"> 3D #7</div>
+                <div class="centered">Quadruped "Hunter" Base</div>
+                <div class="date">04/2017</div>
+                <div class="description">Make a base model for a four-legged hunter </div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/8779536" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/9224678" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d8.jpg)">
+                <div class="number"> 3D #8</div>
+                <div class="centered">Humanoid "Cute" Base</div>
+                <div class="date">04/2017</div>
+                <div class="description">Make a base model for a cute humanoid </div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/9290744" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/9707447" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d9.jpg)">
+                <div class="number"> 3D #9</div>
+                <div class="centered">Toon Eyes</div>
+                <div class="date">05/2017</div>
+                <div class="description">Making full geometry toon eyes </div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/9807028" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/10699596" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d10.jpg)">
+                <div class="number"> 3D #10</div>
+                <div class="centered">Base > Finished "Cute"</div>
+                <div class="date">05/2017</div>
+                <div class="description">Finishing a humanoid cute model from the base</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/10847714" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/11209539" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d11.jpg)">
+                <div class="number"> 3D #11</div>
+                <div class="centered">Tiny Environment Concepts</div>
+                <div class="date">05/2017</div>
+                <div class="description">Quickly prototyping small environments</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/11228263" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/11435399" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d12.jpg)">
+                <div class="number"> 3D #12</div>
+                <div class="centered">Stylized Rocks</div>
+                <div class="date">05/2017</div>
+                <div class="description">Steps for modelling a clump of rocks</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/11454342" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/11582647" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d13.jpg)">
+                <div class="number"> 3D #13</div>
+                <div class="centered">Minotaur</div>
+                <div class="date">06/2017</div>
+                <div class="description">Making a minotaur character from the strong humanoid base</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/11595892" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/11696817" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d14.jpg)">
+                <div class="number"> 3D #14</div>
+                <div class="centered">Stylized Hair</div>
+                <div class="date">06/2017</div>
+                <div class="description">Steps to model stylized hair</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/11783511" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/11826759" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d15.jpg)">
+                <div class="number"> 3D #15</div>
+                <div class="centered">Fantasy Swords</div>
+                <div class="date">06/2017</div>
+                <div class="description">Making swords from components</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/11861442" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files (Includes Randomiser) ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/12440010" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d16.jpg)">
+                <div class="number"> 3D #16</div>
+                <div class="centered">Hands</div>
+                <div class="date">07/2017</div>
+                <div class="description">Steps to model simple hands</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/12471499" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
 
     </div>
 
