--- a/index.html
+++ b/index.html
@@ -87,12 +87,17 @@
         </a>
         <p></p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLV96MV08FFhfKZ8uJmJSj4luyfUH0IPcJ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <a href="https://www.patreon.com/posts/7709604" target="_blank">
-            <div class="patreon-link">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/f77_sQEUKng" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            </div>
-        </a>
+        <p></p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/IJYH8bVQqVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/py4DVbNOMQ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p></p>
+
         <div class="headertext" style="font-size: 20px">
             <a name="articles"></a> Articles
         </div>
@@ -175,8 +180,179 @@
         <p></p>
 
 
+        <a href="https://www.patreon.com/posts/17804712" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article5.jpg)">
+                <div class="number"> #5</div>
+                <div class="centered">Shader Intro</div>
+                <div class="date">05/2018</div>
+                <div class="description">How I got started with shaders (Non-Scary shader intro)</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/19530112" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article6.jpg)">
+                <div class="number"> #6</div>
+                <div class="centered">Line of Sight Prototype</div>
+                <div class="date">06/2018</div>
+                <div class="description">World Position Shader examples (appear & dissolve code)</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+            <a href="https://www.patreon.com/posts/19671923" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/20130909" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article7.jpg)">
+                <div class="number"> #7</div>
+                <div class="centered">Astro Kat : Orniaf Houses</div>
+                <div class="date">07/2018</div>
+                <div class="description">Design behind houses + Environment shader</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/20430343" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article8.jpg)">
+                <div class="number"> #8</div>
+                <div class="centered">Shader Intro 2</div>
+                <div class="date">07/2018</div>
+                <div class="description">Non-Scary shader intro 2: Vertex Fun</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/21033280" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article9.jpg)">
+                <div class="number"> #9</div>
+                <div class="centered">Polybrush and Vertex Color Shaders/div>
+                    <div class="date">08/2018</div>
+                    <div class="description">Using Polybrush to add effects in the editor</div>
+
+                </div>
+                <div class="normal-link">
+                    Read Post
+                </div>
+
+
+                <div class="patreon-link">
+
+                </div>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/21343562" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article10.jpg)">
+                <div class="number"> #10</div>
+                <div class="centered">Astro Kat : Moving Kat/div>
+                    <div class="date">09/2018</div>
+                    <div class="description">Character Controller Sample with IK</div>
+
+                </div>
+                <div class="normal-link">
+                    Read Post
+                </div>
+
+
+                <div class="patreon-link">
+
+                </div>
+
+        </a>
+        <p></p>
+
+
+
+        <a href="https://www.patreon.com/posts/22015350" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article11.jpg)">
+                <div class="number"> #11</div>
+                <div class="centered">Skinned Mesh Painting Prototype/div>
+                    <div class="date">10/2018</div>
+                    <div class="description">Decals using Projectors and Rendertexture</div>
+
+                </div>
+                <div class="normal-link">
+                    Read Post
+                </div>
+
+
+                <div class="patreon-link">
+
+                </div>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/22650450" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article12.jpg)">
+                <div class="number"> #12</div>
+                <div class="centered">Character Customisation Prototype/div>
+                    <div class="date">11/2018</div>
+                    <div class="description">Custom Character using Blendshapes and Color masking</div>
+
+                </div>
+                <div class="normal-link">
+                    Read Post
+                </div>
+
+
+                <a href="https://www.patreon.com/posts/22803341" target="_blank">
+                    <div class="patreon-link">
+                        <Patreon></Patreon> Source Files ($10 Tier)
+                    </div>
+                </a>
+
+        </a>
+        <p></p>
+
+
+
         <div class="headertext" style="font-size: 20px">
-            <a name="shaders"></a> Unity Shaders
+            <a name="shaders"></a> Unity/ Shaders
         </div>
         <p></p>
 
@@ -602,7 +778,7 @@
                 <div class="number"> Unity #24</div>
                 <div class="centered">Fake Liquid Shader</div>
                 <div class="date">04/2018</div>
-                <div class="description"> An outline shader with a firey aura effect </div>
+                <div class="description"> A fake liquid that reacts to movement</div>
             </div>
             <div class="normal-link">
                 Read Post
@@ -614,6 +790,179 @@
             </a>
         </a>
         <p></p>
+
+
+        <a href="https://www.patreon.com/posts/18701684" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity25.jpg)">
+                <div class="number"> Unity #25</div>
+                <div class="centered">Waterfall Shader</div>
+                <div class="date">05/2018</div>
+                <div class="description"> Using normal and triplanar noise for a waterfall </div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/18703957" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/19355776" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity26.jpg)">
+                <div class="number"> Unity #26</div>
+                <div class="centered">World Position Shader</div>
+                <div class="date">06/2018</div>
+                <div class="description"> Switching textures based on an objects position</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/19389890" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/19844414" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity27.jpg)">
+                <div class="number"> Unity #27</div>
+                <div class="centered">Interactive Grass Shader</div>
+                <div class="date">07/2018</div>
+                <div class="description"> Vertex displacement of grass near an object</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/19856973" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/20335708" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity28.jpg)">
+                <div class="number"> Unity #28</div>
+                <div class="centered">Colored Directional Shadow Shader</div>
+                <div class="date">07/2018</div>
+                <div class="description">Changing the color of shadows</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/20406335" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/20894506" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity29.jpg)">
+                <div class="number"> Unity #29</div>
+                <div class="centered">Sprite Outline/Glow Shader</div>
+                <div class="date">08/2018</div>
+                <div class="description"> Adding a colored out/glow effect to sprites</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/20895991" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/21398935" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity30.jpg)">
+                <div class="number"> Unity #30</div>
+                <div class="centered">Toon Metal Shader</div>
+                <div class="date">09/2018</div>
+                <div class="description">A Shiny Specular material based on View and Lighting directions</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/21400430" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/22396709" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity31.jpg)">
+                <div class="number"> Unity #31</div>
+                <div class="centered">Sprite Aura Shader</div>
+                <div class="date">10/2018</div>
+                <div class="description">A moving aura effect using UV distortion</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/22502442" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+
+        <a href="https://www.patreon.com/posts/23117822" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity32.jpg)">
+                <div class="number"> Unity #32</div>
+                <div class="centered">Material Property Blocks</div>
+                <div class="date">12/2018</div>
+                <div class="description">Adding per-instance data to shaders</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/23118668" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/23437127" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity33.jpg)">
+                <div class="number"> Unity #33</div>
+                <div class="centered">Snow & Icicles Shaders</div>
+                <div class="date">12/2018</div>
+                <div class="description"> Painting on snow and icicles with vertex colors</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/23449485" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
 
         <div class="headertext" style="font-size: 20px">
             <a name="textures"></a> Textures & Colors
@@ -856,6 +1205,27 @@
             </a>
         </a>
         <p></p>
+
+
+        <a href="https://www.patreon.com/posts/22245501" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/tex14.jpg)">
+                <div class="number"> Textures #14</div>
+                <div class="centered">Handpainted Stone Tiles</div>
+                <div class="date">10/2018</div>
+                <div class="description">Stylized stone floor tile texture</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/22260969" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
 
         <div class="headertext" style="font-size: 20px">
             <a name="3d"></a> 3D Modelling
@@ -1357,6 +1727,42 @@
                     <Patreon></Patreon> Source Files ($10 Tier)
                 </div>
             </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/20674019" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d28.jpg)">
+                <div class="number"> 3D #28</div>
+                <div class="centered">Dragon Head</div>
+                <div class="date">08/2018</div>
+                <div class="description"> Steps for a basic dragon/ lizard head </div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/20738610" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/23472026" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/3d29.jpg)">
+                <div class="number"> 3D #29</div>
+                <div class="centered">Santa Hat</div>
+                <div class="date">12/2018</div>
+                <div class="description"> Creating a festive christmas hat</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+            <div class="patreon-link">
+            </div>
         </a>
         <p></p>
 
